Add benedikt as co-author to older issues

--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /168
 title: "This Week In React #168: TanStack, useMemo, RSC, preload, flushSync, shadcn-ui, MDX, Storybook, StyleX, TWC, Tokenami, Catalyst, rsc-cache, WishList, VisionOS, Hermes, release-profiler..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 01-03-2024
 ---
 
