--- a/website/newsletter/170/index.mdx
+++ b/website/newsletter/170/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /170
 title: "This Week In React #170: Waku, Remix, Donuts, RSC resentment, React 19, Aria Components, Storybook, Postgres Components, hydration, streams, VisionOS, atob, Maestro, Orbit, Tamagui, VisionCamera..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 01-17-2024
 ---
 
