--- a/website/newsletter/172/index.mdx
+++ b/website/newsletter/172/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /172
 title: "This Week In React #172: Next.js, PPR, Remotion, State of React Native, Parcel, Panda, StyleX, Cosmos, Remix, RTK, TypeScript, Skia, Reanimated, RNTL, Storybook, Flashlight, Tamagui..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 01-31-2024
 ---
 
