--- a/website/newsletter/175/index.mdx
+++ b/website/newsletter/175/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /175
 title: "This Week In React #175: RSC, useSyncExternalStore, Vinxi, Server Actions, Next.js, Remix, margins, WakuLand, R3F-uikit, React-Forget, RN releases, Bridgeless, Expo Fingerprint, Flash Calendar, Zeego, RN Reusables..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 02-28-2024
 ---
 
