--- a/website/newsletter/176/index.mdx
+++ b/website/newsletter/176/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /176
 title: "This Week In React #176: useActionState, React Compiler, Million Lint, TanStack, Generative UI, Vinxi, Remix i18n, Next.js security, Typesafe Router, Shopify RN perf, RCTRootViewFactory, iOS Live Activities, Uni Stack, TypeScript, Parcel..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 03-06-2024
 ---
 
