--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /179
 title: "This Week In React #179: useActionState, Redwood, Waku, Astro, Pre-rendering, Bun, Kotekan, memo, Radix, shadcn/ui, React-Navigation, RN-Screens, CodePush, VisionOS, TypeScript, Node.js..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 03-27-2024
 ---
 
