--- a/website/newsletter/181/index.mdx
+++ b/website/newsletter/181/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /181
 title: "This Week In React #181: React errors, Fast JSX, Flow, React-Query, Jotai, Inline styles, RSC, Next.js, RTL, RN 3D, Orbit, Gesture Handler, Skia, NewArch Helper, TC39, ESLint, VSCode..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 04-10-2024
 ---
 
