--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /167
 title: "This Week In React #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, :has(), Tailwind, date-fns..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 12-19-2023
 ---
 
