--- a/website/newsletter/169/index.mdx
+++ b/website/newsletter/169/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /169
 title: "This Week In React #169: useMemo, 2 Reacts, Next.js, Remix, JS Rising Stars, Docusaurus, Astro, Fresnel, Mutative, JSX emails, Expo usage, React-Native releases, Reanimated, VisionCamera, TypeScript, Rspack, Biome..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 01-09-2024
 ---
 
