--- a/website/newsletter/171/index.mdx
+++ b/website/newsletter/171/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /171
 title: "This Week In React #171: Expo, React Conf, React 19 preview, Next.js, React-Email, Storybook, Panda, Nexar, React-Query, TypeScript, Vocs, Skottie, Harmony, VisionOS..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 01-24-2024
 ---
 
