--- a/website/newsletter/173/index.mdx
+++ b/website/newsletter/173/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /173
 title: "This Week In React #173: Million, Storybook, visionOS, Expo, Conform, Next.js, Remix, Astro, Apollo, useFormStatus, Framer Motion, Ariakit, Reanimated, TypeScript, JQuery, Express, Interop..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 02-07-2024
 ---
 
