--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /178
 title: "This Week In React #178: Remix and Vite, Type-safe Children, Astro DB, React Compiler, Firebolt, Vitest, Composition, Remix Nitro, RSC in React Native, TenTap, Expo Atlas, TypeScript, Elysia..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 03-20-2024
 ---
 
