--- a/website/newsletter/183/index.mdx
+++ b/website/newsletter/183/index.mdx
@@ -11,7 +11,7 @@ This week React Native takes the spotlight! But there are also interesting news 
 
 Earlier this week, I was at React/RN Connection conferences in Paris. It was great to meet some of you there!
 
-By the way, the party is not over. After many years, the awesome [dotJS conf](https://www.dotjs.io/?utm_source=thisweekinreact) is back in Paris on June 27. They already announced many great speakers, including Mark Dalgleish, Malte Ubl, Charlie Gerard, James Q Quick, Ben Lesh... Get a 10% discount with my code "TWIR".
+By the way, the party is not over. After many years, the awesome [dotJS conf](https://www.dotjs.io/?utm_source=thisweekinreact) is back in Paris on June 27. They already announced many great speakers, including Mark Dalgleish, Malte Ubl, Charlie Gerard, James Q Quick, Ben Lesh. Last regular tickets available, get a 10% discount with my code "TWIR".
 
 Due to the conf, I only had today to work on the newsletter. Thankfully my co-author [Benedikt](https://twitter.com/bndkt) took over and did most of the work this week! 🙏
 
