--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/183/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/183/index.mdx
@@ -7,15 +7,15 @@ date: 04-24-2024
 
 Salut à tous !
 
-This week React Native takes the spotlight! But there are also interesting news from Vercel and PRs to take a look at from the React core team.
+Cette semaine, React Native est à l'honneur ! Mais il y a aussi des nouvelles intéressantes de Vercel et des PR à regarder de la part de l'équipe principale de React.
 
-Earlier this week, I was at React/RN Connection conferences in Paris. It was great to meet some of you there!
+En début de semaine, j'étais à la conférence React/RN Connection à Paris. J'ai été ravi de rencontrer certains d'entre vous !
 
-The Parisian party is not over. After many years, the great [**dotJS conference**](https://www.dotjs.io/?utm_source=thisweekinreact) is back in Paris on June 27. They already announced great speakers, including Mark Dalgleish, Malte Ubl, Charlie Gerard, James Q Quick, Ben Lesh... Last regular tickets available, get a 10% discount with my code "TWIR".
+La fête parisienne n'est pas terminée. Après de nombreuses années, la grande [**dotJS conference**](https://www.dotjs.io/?utm_source=thisweekinreact) est de retour à Paris le 27 juin. Ils ont déjà annoncé d'excellents intervenants, dont Mark Dalgleish, Malte Ubl, Charlie Gerard, James Q Quick, Ben Lesh... Dernières places disponibles, obtenez une réduction de 10% avec mon code « TWIR ».
 
-Due to the conf, I only had today to work on the newsletter. Thankfully my co-author [Benedikt](https://twitter.com/bndkt) took over and did most of the work this week! 🙏
+En raison de la conf, je n'ai eu qu'aujourd'hui pour travailler sur la newsletter. Heureusement, mon co-auteur [Benedikt](https://twitter.com/bndkt) a pris le relais et a fait le plus gros du travail cette semaine ! 🙏
 
-Next week, the newsletter takes a well-deserved break. We'll be back on May 8.
+La semaine prochaine, la newsletter fera une pause bien méritée. Nous serons de retour le 8 mai.
 
 <!-- truncate -->
 
