--- a/website/src/pages/conferences.mdx
+++ b/website/src/pages/conferences.mdx
@@ -79,7 +79,7 @@ We are open to negotiating other practices to give you the visibility we both ne
 
 If this media partnership interests you, please reach out to [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=%3CCONF_NAME%3E%20x%20This%20Week%20In%20React%20-%20Media%20Partnership).
 
-It is useful to provide us with all the relevant information about your conf upfront, to streaming the execution of this partnership. In particular, knowing the key events of the conference you want us to promote ahead of time, and their respective date, will help us better orchestrate things.
+To facilitate the execution of this partnership, it is preferable to provide us with all the relevant information about your conf upfront. In particular, knowing the key events of the conference you want us to promote ahead of time, and their respective dates, will help us better orchestrate things.
 
 Here's a useful email template you can use.
 
@@ -111,6 +111,17 @@ We agree to:
 
 ... Other details you would like to discuss ...
 ```
+
+:::tip About newsletter mentions
+
+Use our [public calendar](https://thisweekinreact.com/calendar) to know when we plan to send out an issue on which we can mention your conf.
+
+We usually **normalize** conf mentions and **write the text ourselves**, taking into consideration what you want to highlight. If you want to provide a text, keep it super short, within these 2 sizes:
+
+- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
+- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 June - Get a 10% discount with code "TWIR". Awesome lineup including Evan Bacon, Kent C. Dodds, Theo, Tim Neutkens, Mark Erikson, Fred Schott and so many others!
+
+:::
 
 ---
 
