--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/183/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/183/index.mdx
@@ -47,21 +47,21 @@ import Support from "../_support.mdx";
 
 🐦 [Vercel reverted all edge rendering back to Node.js](https://x.com/leeerob/status/1780705942734331983)
 
-Vercel’s VP of Product, Lee Rob, explained on X that Vercel is “reverting all edge rendering back to Node.js.” If you’re using Vercel (and probably even if you don’t), you’ll know that Vercel has pushed “edge” as a concept for a long time. On the one hand, edge means that compute is run near to where a user accessing a site hosted on Vercel is located. On the other hand, it also means that this compute is run on an “edge runtime,” which is built on V8 and not on Node.js. While the concept of running compute near to the end users sound appealing, the advantages quickly disappear if data needs to be loaded from a central location (which very often is the case). At the same time, development teams are often struggling to adapt workload to the limited subset of APIs available on the edge runtime. Now it seams Vercel has come to the conclusion that overall, the challenges for developers outweigh the limited benefits, and is therefore reverting to centralized Node.js runtimes. I appreciate their transparency around this! If you want more details, Theo made a [video](https://youtu.be/lAGE-k1Zfrg?si=5SP4hyoFkixTsh-y) about it.
+Le vice-président des produits de Vercel, Lee Rob, a expliqué sur X que Vercel « réinstaure tous les rendus du edge sur Node.js ». Si vous utilisez Vercel (et probablement même si vous ne l'utilisez pas), vous savez que Vercel a mis en avant le concept de « edge » depuis longtemps. D'une part, cela signifie que le calcul est effectué à proximité de l'endroit où se trouve l'utilisateur qui accède à un site hébergé sur Vercel. D'autre part, cela signifie également que ce calcul est exécuté sur un « runtime edge », qui est construit sur V8 et non sur Node.js. Si l'idée d'exécuter des calculs à proximité des utilisateurs finaux semble séduisante, les avantages disparaissent rapidement si les données doivent être chargées à partir d'un emplacement central (ce qui est très souvent le cas). Dans le même temps, les équipes de développement ont souvent du mal à adapter la charge de travail au sous-ensemble limité des API disponibles sur le runtime edge. Il semble que Vercel soit arrivé à la conclusion que, globalement, les obstacles rencontrés par les développeurs l'emportent sur les avantages limités, raison pour laquelle ils préfèrent revenir à des runtimes Node.js centralisés. J'apprécie leur transparence à ce sujet ! Si vous voulez plus de détails, Theo a fait une [vidéo](https://youtu.be/lAGE-k1Zfrg?si=5SP4hyoFkixTsh-y) à ce sujet.
 
 ---
 
 - 💸 [Clerk's prebuilt UI components give you a beautiful, fully-functional user management experience in minutes. Start for free!](https://go.clerk.com/AlkHHq8)
-- 👀 [React Core PR - React 19 will not patch fetch() anymore!](https://github.com/facebook/react/pull/28896): the controversial `fetch()` patch to deduplicate requests in RSCs is now removed from React core. You might see it as a good thing, but keep in mind you will now need to deduplicate requests yourself manually with `React.cache`.
-- 👀 [React Core PR - Don't minify symbols in production builds](https://github.com/facebook/react/pull/28881): React 19 production builds will preserve variable/function names and should become easier to read/debug. You can still minify it yourself if you want to, but using HTTP gzip compression should be enough to compensate for the extra size.
-- 👀 [React Docs PR - Add documentation for ref cleanup function](https://github.com/reactjs/react.dev/pull/6770): React 19 ref functions can now return a cleanup function (🐦 [preview](https://twitter.com/sebastienlorber/status/1783108366459375675)). This should also help users using string refs (removed in v19) and classes to migrate thanks to automated codemods.
+- 👀 [React Core PR - React 19 will not patch fetch() anymore!](https://github.com/facebook/react/pull/28896) : le patch controversé `fetch()` pour dédupliquer les requêtes dans les RSC est maintenant retiré du noyau de React. Vous pouvez y voir une bonne chose, mais gardez à l'esprit que vous devrez maintenant dédupliquer les requêtes vous-même manuellement avec `React.cache`.
+- 👀 [React Core PR - Don't minify symbols in production builds](https://github.com/facebook/react/pull/28881) : Les versions de production de React 19 préserveront les noms de variables/fonctions et devraient être plus faciles à lire/déboguer. Vous pouvez toujours les minifier vous-même si vous le souhaitez, mais l'utilisation de la compression HTTP gzip devrait suffire à compenser la taille supplémentaire.
+- 👀 [React Docs PR - Add documentation for ref cleanup function](https://github.com/reactjs/react.dev/pull/6770) : Les fonctions ref de React 19 peuvent désormais renvoyer une fonction de nettoyage (🐦 [aperçu](https://twitter.com/sebastienlorber/status/1783108366459375675)). Cela devrait également aider les utilisateurs qui emploient des refs string (supprimés en v19) et des classes à migrer grâce à des codemods automatisés.
 - 👀 [Remix POC - Remix + Hono + Vite](https://github.com/yusukebe/hono-and-remix-on-vite)
-- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 June - Get a 10% discount with code "TWIR". Awesome lineup including Evan Bacon, Kent C. Dodds, Theo, Tim Neutkens, Mark Erikson, Fred Schott and so many others!
-- 📜 [HTML attributes vs DOM properties](https://jakearchibald.com/2024/attributes-vs-properties/): A great deep dive into subtle DOM behaviors and design decisions, including how frameworks like React or Vue handle the difference. Also explains how React 19 will improve support for Web Components.
-- 📜 [Redwood - Building a new docs site with RSC](https://redwoodjs.com/blog/building-a-new-docs-site-with-rsc): Redwood is dogfooding Redwood by showing how to build a docs site with it, based on MDX and RSCs.
-- 📜 [Deploy a new Remix app to Cloudflare Pages:](https://www.jacobparis.com/content/remix-cloudflare-pages) A lot has recently changed (and improved!) about how Remix can be deployed to CF Pages. This is a good guide on the state of the art.
-- 📜 [Improving INP in React and Next.js](https://www.thisdot.co/blog/improving-inp-in-react-and-next-js): Interaction to Next Paint has recently replaced First Input Delay (FID) as a core web vital; this post details how to optimize it.
-- 📜 [Did Signals Just Land in React?](https://thenewstack.io/did-signals-just-land-in-react/): Spoiler Alert: No, they didn't. But there’s still a way to try signals in React.
+- 🗓 [React Summit](https://reactsummit.com/?utm_source=thisweekinreact) - 🇳🇱 Amsterdam - 14-18 juin - 10% de réduction avec le code « TWIR ». Un programme impressionnant comprenant Evan Bacon, Kent C. Dodds, Theo, Tim Neutkens, Mark Erikson, Fred Schott et bien d'autres !
+- 📜 [HTML attributes vs DOM properties](https://jakearchibald.com/2024/attributes-vs-properties/) : Une excellente plongée dans les comportements subtils du DOM et les décisions de conception, y compris la façon dont les frameworks comme React ou Vue gèrent la différence. Explique également comment React 19 améliorera la prise en charge des Web Components.
+- 📜 [Redwood - Building a new docs site with RSC](https://redwoodjs.com/blog/building-a-new-docs-site-with-rsc) : Redwood montre comment construire un site de documentation avec Redwood, basé sur MDX et RSC.
+- 📜 [Deploy a new Remix app to Cloudflare Pages:](https://www.jacobparis.com/content/remix-cloudflare-pages) Beaucoup de choses ont récemment changé (et se sont améliorées !) sur la façon dont Remix peut être déployé sur les pages CF. Voici un bon guide sur l'état de l'art.
+- 📜 [Improving INP in React and Next.js](https://www.thisdot.co/blog/improving-inp-in-react-and-next-js) : Interaction to Next Paint a récemment remplacé First Input Delay (FID) en tant qu'élément vital du web, cet article explique comment l'optimiser.
+- 📜 [Did Signals Just Land in React?](https://thenewstack.io/did-signals-just-land-in-react/) : Spoiler Alert : Non, ils ne l'ont pas fait. Mais il y a toujours un moyen d'essayer les signaux dans React.
 - 📜 [Vercel - Building an interactive 3D event badge with React Three Fiber](https://vercel.com/blog/building-an-interactive-3d-event-badge-with-react-three-fiber)
 - 📜 [Getting the Current URL in Next.js Server Components](https://www.propelauth.com/post/getting-url-in-next-server-components)
 - 📜 [How to manifest streamlined authentication: AWS Cognito in a React app](https://evilmartians.com/chronicles/how-to-manifest-streamlined-authentication-aws-cognito-in-a-react-app)
@@ -76,7 +76,7 @@ Vercel’s VP of Product, Lee Rob, explained on X that Vercel is “reverting al
 - 📦 [Spoiled - Realistic Spoiler component for React.js](https://github.com/molefrog/spoiled)
 - 🎙️ [Off The Main Thread Podcast: Putting React In The Browser](https://offthemainthread.tech/episode/putting-react-in-the-browser/)
 - 🎥 [Jack Herrington - JS Built-in Signals In React and Svelte today!](https://www.youtube.com/watch?v=HSVcZa5yTKE)
-- 🎥 [Ben Holmes - Vercel got it wrong](https://www.youtube.com/watch?v=_dtyYDwHAIc): Interesting take on the “edge” topic by Ben Holmes, detailing Cloudflare’s approach.
+- 🎥 [Ben Holmes - Vercel got it wrong](https://www.youtube.com/watch?v=_dtyYDwHAIc) : Ben Holmes présente un point de vue intéressant sur le thème du « edge », en détaillant l'approche de Cloudflare.
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -109,25 +109,25 @@ More info, examples and documentation on [nlux.dev](https://nlux.dev?c-twr2-p1)
 
 📦 [React Native 0.74 released](https://reactnative.dev/blog/2024/04/22/release-0.74)
 
-This week saw the release of React Native 0.74, a major milestone for the community! The latest version makes “bridgeless mode” the default for new projects using the New Architecture (with the next release, 0.75, the New Arch will become the default, too). Both can still be turned off if needed, but they clearly represent the future of React Native, and over the last months especially, A LOT of libraries have added support for both. But there’s more: RN 0.74 includes Yoga 3.0. There are very few breaking changes and deprecations, but it’s still worth checking them out in the [release notes](https://reactnative.dev/blog/2024/04/22/release-0.74).
+Cette semaine a vu la sortie de React Native 0.74, un jalon important pour la communauté ! La dernière version fait du "bridgeless mode" le mode par défaut pour les nouveaux projets utilisant la Nouvelle Architecture (avec la prochaine version, 0.75, la New Arch deviendra également le mode par défaut). Les deux peuvent toujours être désactivés si nécessaire, mais ils représentent clairement l'avenir de React Native, et au cours des derniers mois en particulier, BEAUCOUP de bibliothèques ont ajouté la prise en charge des deux. Mais ce n'est pas tout : RN 0.74 inclut Yoga 3.0. Il y a très peu de changements et de dépréciations, mais cela vaut la peine de les vérifier dans les [notes de version](https://reactnative.dev/blog/2024/04/22/release-0.74).
 
 📦 [React Native IDE is now in beta](https://ide.swmansion.com/)
 
-Another exciting news this week is the closed beta for React Native IDE, developed by the team at Software Mansion. You can now sign up to get early access to the IDE. They also have a landing page up now, and the [docs](https://ide.swmansion.com/docs/getting-started) are publicly available for anyone curious about it.
+Une autre nouvelle passionnante cette semaine est la bêta fermée de React Native IDE, développée par l'équipe de Software Mansion. Vous pouvez maintenant vous inscrire pour obtenir un accès anticipé à l'IDE. Ils ont également une page d'accueil, et les [docs](https://ide.swmansion.com/docs/getting-started) sont publiquement disponibles pour tous les curieux.
 
 ---
 
 - 💸 [React Native Analytics — Omlet is a New Tool to Analyze Component Usage. See Trends to Improve Code and Boost Component Adoption.](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-rn-ql-apr-2024)
 - 🐦 [Right-click to inspect with access to components hierarchy and jump-to-source in the coming React Native IDE?](https://x.com/kzzzf/status/1781334337960493100)
 - 🐦 [Another week, another wild push from Evan Bacon: Precompiled React Native](https://x.com/Baconbrix/status/1782454818851663918)
-- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 May. Get a [10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
-- 📜 [Sunrising New Architecture in the New Expensify App](https://blog.swmansion.com/sunrising-new-architecture-in-the-new-expensify-app-729d237a02f5): Super cool to see a complex open-source app adapting the New Arch. A great example to look into!
-- 📜 [Apple privacy manifest for React Native](https://dev.to/dannyhw/apple-privacy-manifest-for-react-native-29fk): I’ve mentioned the Apple Privacy Manifest requirement before; finally, a good blog post summarizes the topic.
+- 🗓 [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 22-24 mai. Bénéficiez d'une [réduction de 10 %](https://ti.to/appjs/2024/discount/TWIR) avec le code « TWIR ».
+- 📜 [Sunrising New Architecture in the New Expensify App](https://blog.swmansion.com/sunrising-new-architecture-in-the-new-expensify-app-729d237a02f5) : Super cool de voir une application open-source complexe adapter le New Arch. Un bel exemple à étudier !
+- 📜 [Apple privacy manifest for React Native](https://dev.to/dannyhw/apple-privacy-manifest-for-react-native-29fk) : J'ai déjà mentionné la nécessité de l'Apple Privacy Manifest ; enfin, un bon article de blog résume le sujet.
 - 📜 [Expo Blog: Save users from deleting your app with expo-quick-actions](https://expo.dev/blog/expo-quick-actions)
 - 📜 [Creating a React Native “Curved Bottom Bar” with Handwritten SVG](https://kyleshevlin.com/react-native-curved-bottom-bar-with-handwritten-svg/)
 - 📜 [Exploring VisionOS Apps with React Native](https://geekyants.com/blog/exploring-visionos-apps-with-react-native)
 - 📜 [Microsoft is retiring App Center: Here’s what React Native developers should use instead](https://shift.infinite.red/microsoft-is-retiring-app-center-heres-what-react-native-developers-should-use-instead-c2a8786f971e)
-- 📦 [React Native VisionCamera V4: Draw directly on camera frames with Skia, lots of Android bug fixes](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.0.0): There is a great [demo](https://github.com/mrousavy/FaceBlurApp) showcasing what kind of stuff this enables, too!
+- 📦 [React Native VisionCamera V4: Draw directly on camera frames with Skia, lots of Android bug fixes](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.0.0) : Il existe une [démo](https://github.com/mrousavy/FaceBlurApp) très intéressante qui montre le genre de choses que cela permet de faire, également !
 - 📦 [react-native-svg 15.2.0 adds support for RN 0.74 on New Architecture](https://github.com/software-mansion/react-native-svg/releases/tag/v15.2.0)
 - 🎙️ [RNR 294 - Goodbye, App Center!](https://reactnativeradio.com/episodes/rnr-294-rip-app-center-and-other-news)
 - 🎙 [Rocket Ship 39 - Award Winning Credit Card App Yonder with Henry Moulton](https://podcast.galaxies.dev/episodes/039-award-winning-credit-card-app-yonder-with-henry-moulton)
