--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -62,7 +62,7 @@ import Support from "../_support.mdx";
     
 *   Easily turn Omlet’s component insights into specific codebase improvements — like what code to update, deprecate, or migrate
     
-*   Get setup and run your first scan in <5 minutes
+*   Get setup and run your first scan in \<5 minutes
     
 
 Take the guesswork out of which components to focus on next with Omlet.
