--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -42,7 +42,7 @@ import Support from "../_support.mdx";
 
 <Todo />
 
-- 💸 [React Universe Conf - Early Birds are flying away soon. Use code RUCxTWIR to snatch an extra 10% off. These ticket prices won't get lower!](https://www.reactuniverseconf.com/tickets-2024?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
+- 💸 [React Universe Conf - Previously React Native EU. Experts from React & React Native under one roof! Use code RUCxTWIR to get a 10% discount.](https://www.reactuniverseconf.com/tickets-2024?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
 
 <SubscribeFormEmbed placement="middle" />
 
