--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -58,6 +58,8 @@ This section is co-authored with [Benedikt](https://twitter.com/bndkt).
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/184/meme.jpg)](https://twitter.com/sebastienlorber/status/1786399152550597114)
+<Todo />
+
+[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
 See ya! 👋
