--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -8,13 +8,17 @@ unlisted: true
 
 Hi everyone!
 
-React Rally Intro
+We're back after a short break, covering two weeks of news!
 
-Promo Josh courses?
+I hope you have recovered well from the React 19 beta release 😄 But it's not over, we are entering an exciting period with React Conf, Vercel Ship, App.js and many other conferences just around the corner.
 
-[https://courses.joshwcomeau.com/checkout/joy-of-react/ultimate?couponCode=TWIR](https://courses.joshwcomeau.com/checkout/joy-of-react/ultimate?couponCode=TWIR)
+This week, React patching globals was a hot topic in the ecosystem. We also had a few interesting React-related releases, including 2 major headless libraries.
 
-[https://www.joyofreact.com/](https://www.joyofreact.com/)
+As expected, Expo SDK 51 is out, and it looks like it's a good time to try out the New Architecture.
+
+Looking for a great React summer conf? [React Rally](https://reactrally.com/?utm_source=thisweekinreact) (August 12-13, 🇺🇸 Utah) tickets are on sale. They offer us a [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR".
+
+Speaking of discounts, Josh Comeau is also offering one for his flagship course [The Joy of React](https://www.joyofreact.com/). Our readers get an [extra 10% off](https://courses.joshwcomeau.com/checkout/joy-of-react/ultimate?couponCode=TWIR) with code "TWIR".
 
 <!-- truncate -->
 
@@ -127,7 +131,7 @@ With this data, you can stop guessing which components to keep, remove, or impro
 
 ## 📱 React-Native {#react-native}
 
-This section is co-authored with [Benedikt](https://twitter.com/bndkt).
+This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 [Expo SDK 51 released](https://expo.dev/changelog/2024/05-07-sdk-51)
 
@@ -145,8 +149,8 @@ Hot on the heels of React Native 0.74 follows the release of Expo SDK 51. This r
 - 📜 [iPad Hover effects in React Native 0.74](https://www.oskarkwasniewski.dev/blog/react-native-ipad-hover-effects): iPadOS has a specific way to highlight when the input device (e.g. the Pencil) hovers over a UI element; here’s how to use it in RN).
 - 📜 [Rust modules in React Native](https://ospfranco.com/post/2024/05/08/react-native-rust-module-guide/)
 - 📦 [Reanimated 3.9 - Screen Transitions, useScrollViewOffset now works on Web, React Native 0.74 and Bridgeless Mode support, Shared Element Transitions stability improvements](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.9.0)
+- 📦 [React Native 0.74.1 - Privacy manifest aggregation](https://github.com/facebook/react-native/releases/tag/v0.74.1)
 - 📦 [React Native 0.73.8 Add privacy manifest to template](https://github.com/facebook/react-native/releases/tag/v0.73.8)
-- 📦 [React Native 0.74.1](https://github.com/facebook/react-native/releases/tag/v0.74.1)
 - 📦 [React Native VisionOS 0.74](https://github.com/callstack/react-native-visionos/releases/tag/v0.74.0-visionos)
 - 📦 [NativeWindUI - New component library with free and paid components](https://nativewindui.com/)
 - 🎥 [Simon Grimm - React Native IDE Beta](https://www.youtube.com/watch?v=eOWxKkHakyY)
