--- a/website/newsletter/_template/index.mdx
+++ b/website/newsletter/_template/index.mdx
@@ -44,7 +44,7 @@ import Support from "../_support.mdx";
 
 ## 📱 React-Native {#react-native}
 
-This section is co-authored with [Benedikt](https://twitter.com/bndkt).
+This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 <Todo />
 
