--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /184
-title: "This Week In React #184: ..."
+title: "This Week In React #184: Patching globals, Expo, React Aria, Headless UI, Strict Mode, Next.js, Mitosis, Twofold, Terminosaurus, Docusaurus, MST, Remix-SaaS, VisionCamera, Reanimated, VisionOS, Apollo, Vite, Node, Hono ..."
 authors: [slorber]
 date: 05-08-2024
 unlisted: true
@@ -16,9 +16,9 @@ This week, React patching globals was a hot topic in the ecosystem. We also had 
 
 As expected, Expo SDK 51 is out, and it looks like it's a good time to try out the New Architecture.
 
-Looking for a great React summer conf? [React Rally](https://reactrally.com/?utm_source=thisweekinreact) (August 12-13, 🇺🇸 Utah) tickets are on sale. They offer us a [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR".
+Looking for a great React summer conf? [React Rally](https://reactrally.com/?utm_source=thisweekinreact) tickets are on sale (August 12-13, 🇺🇸 Utah). Our readers get a [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR".
 
-Speaking of discounts, Josh Comeau is also offering one for his flagship course [The Joy of React](https://www.joyofreact.com/). Our readers get an [extra 10% off](https://courses.joshwcomeau.com/checkout/joy-of-react/ultimate?couponCode=TWIR) with code "TWIR".
+Speaking of discounts, Josh Comeau is also offering one for his flagship course [The Joy of React](https://www.joyofreact.com/). In addition to an already great discount, our readers get an [extra 10% off](https://courses.joshwcomeau.com/checkout/joy-of-react/ultimate?couponCode=TWIR) with code "TWIR"!
 
 <!-- truncate -->
 
@@ -46,7 +46,9 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-[React Aria release, May 1](https://react-spectrum.adobe.com/releases/2024-05-01.html)
+[![React Aria release, May 1](/emails/issues/184/reactaria.jpg)](https://react-spectrum.adobe.com/releases/2024-05-01.html)
+
+[**React Aria release, May 1**](https://react-spectrum.adobe.com/releases/2024-05-01.html)
 
 Adobe engineers recently released many improvements to their unstyled, accessible React component library. The highlights are:
 
@@ -60,7 +62,9 @@ Adobe engineers recently released many improvements to their unstyled, accessibl
 
 ---
 
-[Headless UI v2.0 for React](https://tailwindcss.com/blog/headless-ui-v2)
+[![Headless UI v2.0 for React](/emails/issues/184/headlessui.jpg)](https://tailwindcss.com/blog/headless-ui-v2)
+
+[**Headless UI v2.0 for React**](https://tailwindcss.com/blog/headless-ui-v2)
 
 The Tailwind team released a major upgrade to their unstyled, accessible React component library. The highlights are:
 
